# devdiary-backend

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  conf.toml
db/: procedures.sql  tables.sql
src/: default_config.rs  main.rs
src/database/: connection.rs  mod.rs  postgresql_connection.rs
src/database/postgres_connection/: mock_postgres_connection.rs  mod.rs  postgres_connection.rs
src/entities/: github_user_info.rs  mod.rs  session.rs  user.rs
src/restserver/: mod.rs  restrouter.rs  router_builder.rs  server.rs  session.rs
src/restserver/database/: connection.rs  postgresql_connection.rs
src/restserver/handlers/: local_login.rs  mod.rs  oauth.rs  register_local_login.rs  test_utility.rs
src/server/: mod.rs
